Uzair 21 Birthday Update

--- a/index.html
+++ b/index.html
@@ -6,16 +6,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/91a5f81a97.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="Icons">
+        <a id="instagram" href="https://www.instagram.com/uzairwaheed_8"><i class="fa-brands fa-instagram"></i></a>
+        <a id="linkedin" href="https://www.linkedin.com/in/uzair-waheed-755960262" target="_blank"><i class="fa-brands fa-linkedin"></i></a>      
+    </div>
+
     <div id="header">
-        <h1>Today is Uzair's birthday 🎉</h1>
+        <h1>Happy Birthday Uzair Waheed 🎂🎉</h1>   
         <img id="bff-img" src="images/IMG_1132 2.jpg">
         <h2 id="bday-age">21 years old</h2>
         <h4 id="bday-date">30-01-2003</h4>
     </div>
 
+    <h2>You have one unread message... 💌</h2>
+    <p id="Wish"><br><br><br><br></p>
+    
     <div class="gift-section">
         <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
         <h3 class="gift-hint">(Hover over the gift)</h3>
@@ -42,7 +51,11 @@
         <div class="gift-img" id="gift-img-cheers"></div>
     </div>
 
-    <p id="footer">Want to create your own Birthday GIFt site? Take <a href="https://scrimba.com/learn/htmlandcss" target="_blank">this HTML & CSS course.</a></p>
+    <div class="gift-section">
+        <h2 class="gift-title">The most classic picture with you 🤝</h2>
+        <div class="gift-img" id="Pic"></div>
+    </div>
+    <!--<p id="footer">Want to create your own Birthday GIFt site? Take <a href="https://scrimba.com/learn/htmlandcss" target="_blank">this HTML & CSS course.</a></p>-->
 
 </body>
 
