--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 </head>
 
 <body>
-    <div class="Icons">
-        <a id="instagram" href="https://www.instagram.com/uzairwaheed_8"><i class="fa-brands fa-instagram"></i></a>
-        <a id="linkedin" href="https://www.linkedin.com/in/uzair-waheed-755960262" target="_blank"><i class="fa-brands fa-linkedin"></i></a>      
-    </div>
 
     <div id="header">
         <h1>Happy Birthday Uzair Waheed 🎂🎉</h1>   
@@ -56,7 +52,11 @@
         <div class="gift-img" id="Pic"></div>
     </div>
     <!--<p id="footer">Want to create your own Birthday GIFt site? Take <a href="https://scrimba.com/learn/htmlandcss" target="_blank">this HTML & CSS course.</a></p>-->
-
+    <div class="Icons">
+        <h2 class="gift-title">Follow Uzair on Instagram and LinkedIN</h2>
+        <a id="instagram" href="https://www.instagram.com/uzairwaheed_8"><i class="fa-brands fa-instagram"></i></a>
+        <a id="linkedin" href="https://www.linkedin.com/in/uzair-waheed-755960262" target="_blank"><i class="fa-brands fa-linkedin"></i></a>      
+    </div>
 </body>
 
 </html>
